# esp32-dual-rs485-wifi-conv

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt
scripts/: install_sdk.sh  prepare_sdk.sh
